Added new model with corrective maintenance to slides

--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -28,10 +28,7 @@
 	s_{ait} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (O_p \cdot v_p - \sum_{r \in R} N_{rp} \cdot C_{rp}) ]
 \end{equation}
-
-\bigskip
 subject to:
-
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in I, \forall t \in T				\\
 s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in I						\\
@@ -104,11 +101,7 @@ Parameters:
 	s_{ait}, b_{at} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} (O_t \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
-
-\bigskip
-
 subject to:
-
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}													&	\forall a \in A, \forall i \in M, \forall t \in T	\\
 s_{ai\sigma_{it_N}} \geq& 1												&	\forall a \in A, \forall i \in M^M			\\		
@@ -182,11 +175,7 @@ Parameters:
 	s_{ait}, o_{at} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p}\sum_{a \in A} (o_{at} \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
-
-\bigskip
-
 subject to:
-
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}																	& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T	\\
 s_{ai\sigma_{it_N}} \geq& 1																& \forall a \in A, \forall i \in I\cup M^M			\\
@@ -263,10 +252,7 @@ Parameters:
 	s_{ait} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} \sum_{a \in A} ((1 - s_{ai_0t}) \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
-
-\bigskip
 subject to:
-
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}											&	\forall a \in A, \forall i \in D, \forall t \in T			\\
 s_{ai\sigma_{it_N}} \geq& 1										&	\forall a \in A, \forall i \in D						\\
@@ -337,11 +323,7 @@ Parameters:
 	s_{ait}, o_{at} \in \{0, 1\}}} 
 	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} \sum_{a \in A} (o_{at} \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
 \end{equation}
-
-\bigskip
-
 subject to:
-
 \begin{align}
 s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
 s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^O			\\
@@ -359,7 +341,7 @@ o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \fora
 \small
 \expl Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor	\\
 \expl Makes every task that is started stay started 	\\
-\expl Forces every installation and mandatory maintenance task to be starded and finished by the final timestep	\\
+\expl Forces every installation and mandatory maintenance task to be started and finished by the final timestep	\\
 \expl Ensures every non-decommission task is inactive during decomission \\
 \expl For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
 \expl Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished. It also sets a limit on the amount of vessels that can be charatered in a given period	\\
@@ -404,9 +386,98 @@ Parameters:
 \item $v_t$: The value of energy a single turbine produces at timestep $t$
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
 \item $\lambda_a$: The number of timesteps after the last maintenance before asset $a$ fails
-\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, taking into account the duration and the weather conditions
+\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, generated duration and the weather conditions
 \item $\rho_{ir}$: The amount of resource $r$ used for task $i \in \mathcal{I}$
 \item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
+\end{itemize}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+%------------------------------------------------------------------CORRECTIVE-----------------------------------------------------------------------
+
+\begin{frame}{Initial Corrective model} %TODO: Check
+\scriptsize
+
+\begin{equation}
+	\max_{\substack{N_{rp} \in \mathbb{Z}^* \\ 
+	s_{ait}, o_{at} \in \{0, 1\}}} 
+	\sum_{p \in P} [ DIS^p (\sum_{t\in T_p} \sum_{a \in A} (o_{at} \cdot v_t)  - \sum_{r\in R} (N_{rp} \cdot C_{rp})) ]
+\end{equation}
+subject to:
+\begin{align}
+s_{ait} \leq& s_{ai(t+1)}															& \forall a \in A, \forall i \in \mathcal{I}, \forall t \in T		\\
+s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathcal{I} - M^C			\\
+s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
+s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
+m_{rp} \geq& N_{rp} \geq \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
+o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t} - f_{at}									& \forall a \in A, \forall t \in T					\\
+f_{at} \geq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t} - \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_{ai})}})	& \forall a \in A, \forall t \in T	\\
+f_{a(t-1)} \geq& s_{ait} - s_{ai(t-1)}													& \forall a \in A, \forall i \in M^C, \forall t \in T 			\\
+o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \forall i \in M, \forall t \in T		
+\end{align}
+
+\end{frame}
+
+\begin{frame}{Corrective Model Explanation}
+\footnotesize
+\expl Objective function, sums up profits from energy made, subtracts money used on resources (vessels), and multiplies it all with a discount factor \\
+\expl Makes every task that is started stay started 	\\
+\expl Forces every installation and preventive maintenance task to be started and finished by the final timestep \\
+\expl Ensures every non-decommission task is inactive during decomission \\
+\expl For every precedence relation $(i, j)$, ensures that $i$ is finished before $j$ is started 	\\
+\expl Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished. It also sets a limit on the amount of vessels that can be charatered in a given period	\\
+\expl An asset can only be online if installation is complete, decomission has not started yet, and it isn't in a failure state \\
+\expl An asset is in a failure state if installation is complete, decomission has not started yet, and it has not gotten maintained recently enough  \\
+\expl A corrective maintenance task can only be started if the asset is in a failure state \\
+\expl Ensures an asset if offline is maintenance work is going on at this moment 
+\end{frame}
+
+\begin{frame}{Notation overview}
+\tiny
+
+\begin{columns}
+\begin{column}{.48\textwidth}
+Sets:
+\begin{itemize}
+\item $P$: All time periods (large scale)
+\item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
+\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $R$: All resources
+\item $I$: All installation tasks per asset [$i^I_0, \dots , i^I_N$]
+\item $M = M^P \cup M^C$: all preventive and corrective maintenance tasks
+\item $D$: All decomission tasks per asset [$i^D_0, \dots , i^D_N$]
+\item $\mathcal{I} = I \cup M \cup D$: All tasks
+\item $IP$: All precedency pairs ($i$, $j$). Includes relations stating that the final installation task is finished before maintenance and decomission are started. 
+\item $A$: All assets
+\end{itemize}
+
+Decision variables:
+\begin{itemize}
+\item $o_{at}$: Binary variable, 1 if asset $a$ is online at timestep $t$
+\item $N_{rp}$: Number of resources $r$ used in period $p$
+\item $s_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ has started at or before time $t$
+\item $f_{at}$: Binary variable, 1 if asset $a$ has failed at time $t$
+\end{itemize}
+\end{column}
+
+\hfill
+
+\begin{column}{.48\textwidth}
+Deterministic parameters:
+\begin{itemize}
+\item $DIS$: The discount factor per time period
+\item $C_{rp}$: The cost of chartering resource $r$ in period $p$
+\item $\rho_{ir}$: The amount of resource $r$ used for task $i \in \mathcal{I}$
+\item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
+\end{itemize}
+
+Stochastic parameters:
+\begin{itemize}
+\item $v_t$: The value of energy a single turbine produces at timestep $t$
+\item $\lambda_{ai}$: The number of timesteps after the last maintenance before asset $a$ fails
+\item $\sigma_{it}$: Indicates the timestep at which task $i$ should have been started for it to be finished by timestep $t$, generated based on duration and the weather conditions (stochastic based on those)
 \end{itemize}
 \end{column}
 \end{columns}
