Updated data reader

--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -59,7 +59,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$:  All tasks per asset [$1, \dots , i_N$]
 \item $IP$: All precedency pairs ($i$, $j$)
@@ -132,7 +132,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $A$: All assets
 \item $M = M^M \cup M^O$: All (mandatory and optional) maintenance tasks
@@ -208,7 +208,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$: All installation tasks per asset [$1, \dots , i_N$]
 \item $M = M^M \cup M^O$: all mandatory and optional maintenance tasks
@@ -281,7 +281,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $D$:  All tasks per asset [$i_0, \dots , i_N$]
 \item $IP$: All precedency pairs ($i$, $j$)
@@ -359,7 +359,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$: All installation tasks per asset [$i^I_0, \dots , i^I_N$]
 \item $M = M^M \cup M^O$: all mandatory and optional maintenance tasks
@@ -443,7 +443,7 @@ Sets:
 \begin{itemize}
 \item $P$: All time periods (large scale)
 \item $T$: All time intervals (small scale) [$t_0, \dots , t_N$]
-\item $T_p \in T$: All time intervals (small scale) in period $p$
+\item $T_p \subset T$: All time intervals (small scale) in period $p$
 \item $R$: All resources
 \item $I$: All installation tasks per asset [$i^I_0, \dots , i^I_N$]
 \item $M = M^P \cup M^C$: all preventive and corrective maintenance tasks
