--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -412,9 +412,9 @@ s_{ai\sigma_{it_N}} \geq& 1														& \forall a \in A, \forall i \in \mathc
 s_{ai^D_0t} - 1 \leq& s_{ai\sigma_{it}} - s_{ait}											& \forall a \in A, \forall i \in \mathcal{I} - D, \forall t \in T	\\
 s_{ajt} \leq& s_{ai\sigma_{it}}														& \forall a \in A, \forall (i, j) \in IP, \forall t \in T 		\\
 m_{rp} \geq& N_{rp} \geq \sum_{a\in A} \sum_{i\in \mathcal{I}} (\rho_{ir} \cdot (s_{ait} - s_{ai\sigma_{it}})) 		& \forall r \in R, \forall p \in P, \forall t \in T_p 			\\
-o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t} - f_{at}									& \forall a \in A, \forall t \in T					\\
-f_{at} \geq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t} - \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_{ai})}})	& \forall a \in A, \forall t \in T	\\
-f_{a(t-1)} \geq& s_{ait} - s_{ai(t-1)}													& \forall a \in A, \forall i \in M^C, \forall t \in T 			\\
+o_{at} \leq& s_{ai^I_N\sigma_{i^I_Nt}} - s_{ai^D_0t}										& \forall a \in A, \forall t \in T					\\
+o_{at} \leq& \sum_{i \in M \cup \{i^I_N\}} (s_{ai\sigma_{it}} - s_{ai\sigma_{i(t-\lambda_{ai})}})				& \forall a \in A, \forall t \in T	\\
+s_{ait} - s_{ai(t-1)} \leq& 1 - \sum_{j \in M \cup \{i^I_N\}} \frac{(s_{aj\sigma_{jt}} - s_{aj\sigma_{j(t-\lambda_{aj})}})}{L}		& \forall a \in A, \forall i \in M^C, \forall t \in T 	\\
 o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \forall i \in M, \forall t \in T		
 \end{align}
 
@@ -430,7 +430,7 @@ o_{at} \leq& 1 + s_{ai\sigma_{it}} - s_{ait}												& \forall a \in A, \fora
 \expl Counts up the resources needed in a time period by adding the resources needed by all tasks started, and subtracting the resources needed by all tasks finished. It also sets a limit on the amount of vessels that can be charatered in a given period	\\
 \expl An asset can only be online if installation is complete, decomission has not started yet, and it isn't in a failure state \\
 \expl An asset is in a failure state if installation is complete, decomission has not started yet, and it has not gotten maintained recently enough  \\
-\expl A corrective maintenance task can only be started if the asset is in a failure state \\
+\expl A corrective maintenance task can only be started if the asset is in a failure state (division by $L$ means any number of tasks can have been recent enough for their time to matter) \\
 \expl Ensures an asset if offline is maintenance work is going on at this moment 
 \end{frame}
 
@@ -458,7 +458,6 @@ Decision variables:
 \item $o_{at}$: Binary variable, 1 if asset $a$ is online at timestep $t$
 \item $N_{rp}$: Number of resources $r$ used in period $p$
 \item $s_{ait}$: Binary variable, 1 if task $i \in \mathcal{I}$ for asset $a$ has started at or before time $t$
-\item $f_{at}$: Binary variable, 1 if asset $a$ has failed at time $t$
 \end{itemize}
 \end{column}
 
@@ -471,6 +470,7 @@ Deterministic parameters:
 \item $C_{rp}$: The cost of chartering resource $r$ in period $p$
 \item $\rho_{ir}$: The amount of resource $r$ used for task $i \in \mathcal{I}$
 \item $m_{rp}$: The maximum amount of resources $r$ that can be charatered in period $p$
+\item $L$: A large number (at least $|M|+1$)
 \end{itemize}
 
 Stochastic parameters:
