--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -587,24 +587,32 @@ l_v \cdot N_{vm\sigma} 			&\geq 	P_m \cdot d^P_v + R_{m\sigma} \cdot d^R_v		& \f
 \scriptsize
 
 \begin{equation}
-	\min_{N_{vm\sigma}, P_m, R_{m\sigma} \in \mathbb{Z}^*} 
-	\frac{1}{|S|} \cdot \sum_{\sigma \in S} \sum_{m \in M} [\sum_{v \in V} 
-	(N_{vm\sigma} \cdot C_{vm}) +  
-	P_m \cdot d_P \cdot e^h_m + 
-	\sum_{m' = 0}^{m} (f_{m'\sigma} - R_{m'\sigma}) \cdot e^m_m]	
+	\min_{\substack{s_i \in \mathbb{Z}^* \\ 
+	a_{vij} \in \{0, 1\}}} 
+	\sum_{i \in I} c_i \cdot (s_i + \max_{y \in Y} (s_{yi}+ d_{yi}))
 \end{equation}
 subject to:
 \begin{align}
-t_{v(i+1)} - t_{vi}				&\geq 	d_{yi} \cdot a_{vi}		& \forall y \in Y, \forall v \in V_y, \forall i \in I 		\\
-\sum_{v\in V_y} a_{vi}			&\geq 	\rho_{yi}			& \forall y \in Y, \forall i \in I				\\
-t_{vi}			 			&\geq	 	s_i + w_{yi} 			& \forall y \in Y, \forall v \in V_y, \forall i \in I		\\	
-t_{vi}			 			&\leq	 	s_i + w_{yi} + m_{yi}	& \forall y \in Y, \forall v \in V_y, \forall i \in I					
+\sum_{j \in J} a_{vij}						&\leq 		1						& \forall v \in V, \forall i \in I 						\\
+\sum_{i \in I} a_{vij}						&\leq 		\sum_{i \in I} a_{vi(j-1)}			& \forall v \in V, \forall j \in J - \{ 0 \}					\\
+\rho_{yi}								&\leq	 	\sum_{v \in V_y} \sum_{j \in J} a_{vij} 	& \forall y \in Y, \forall i \in I						\\	
+\begin{aligned} M \cdot (a_{vij} + a_{vi'j}) + \\ 
+d_{yi'} \cdot a_{vi'j} - 2M \end{aligned}				&\leq	 	s_i + s_{yi} - s_{i'} + s_{i'y}		& \forall y \in Y, \forall v \in V_y, \forall i, i' \in I, \forall j \in J				
 \end{align}
 
 \end{frame}
 
 \begin{frame}{Multilevel Model Explanation}
-\expl hi
+\expl 55 \\
+\expl 56 \\ 
+\expl 57 \\
+\expl 58 \\ 
+\bigskip
+\expl Objective is to minimize costs of tasks being uncompleted (the +max bit is optional as it's about constants) \\ 
+\expl 60 \\ 
+\expl 61 \\ 
+\expl 62 \\
+\expl 63
 \end{frame}
 
 \begin{frame}{Notation overview}
