--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -568,18 +568,19 @@ Stochastic parameters:
 \scriptsize
 
 \begin{equation}
-	\min_{N_{vm\sigma}, P_m, R_{m\sigma} \in \mathbb{Z}^*} 
+	\min_{\substack{N_{ym\sigma}, P_m, R_{m\sigma} \in \mathbb{Z}^* \\
+	\gamma_\sigma \in \mathbb{R}_{\geq 0} }}
 	\begin{aligned}
-	\frac{1}{|S|} \cdot \sum_{\sigma \in S} \sum_{m \in M} [\sum_{v \in V} 
-	(N_{vm\sigma} \cdot c_{vm}) +  
+	\frac{1}{|S|} \cdot \sum_{\sigma \in S} ( \sum_{m \in M} [\sum_{y \in Y} 
+	(N_{ym\sigma} \cdot c_{ym}) +  
 	P_m \cdot d_P \cdot e^H_m + \\
-	\sum_{m' = 0}^{m} (f_{m'\sigma} - R_{m'\sigma}) \cdot e^M_m -
-	u \cdot \gamma_\sigma] 
+	\sum_{m' = 0}^{m} (f_{m'\sigma} - R_{m'\sigma}) \cdot e^M_m ]
+	- u \cdot \gamma_\sigma)
 	\end{aligned}	
 \end{equation}
 subject to:
 \begin{align}
-l_v \cdot N_{vm\sigma} 			&\geq 	P_m \cdot d^P_v + R_{m\sigma} \cdot d^R_v	 + \gamma_\sigma	& \forall \sigma \in S, \forall m \in M, \forall v \in V 		\\
+l_y \cdot N_{ym\sigma} 			&\geq 	P_m \cdot d^P_y + R_{m\sigma} \cdot d^R_y	 + \gamma_\sigma	& \forall \sigma \in S, \forall m \in M, \forall y \in Y 		\\
 \sum_{m' = 0}^{m-1} f_{m'\sigma}	&\geq 	\sum_{m' = 0}^m R_{m'\sigma}						& \forall \sigma \in S, \forall m \in M				\\
 \sum_{m\in M} P_m 			&\geq 	A 										&						
 \end{align}
@@ -590,7 +591,7 @@ l_v \cdot N_{vm\sigma} 			&\geq 	P_m \cdot d^P_v + R_{m\sigma} \cdot d^R_v	 + \g
 \scriptsize
 
 \begin{equation}
-	\min_{\substack{s_i \in \mathbb{Z}^* \\ 
+	\min_{\substack{s_i \in \mathbb{R}_{\geq 0} \\ 
 	a_{vij} \in \{0, 1\}}} 
 	\sum_{i \in I} c_i \cdot (s_i + \max_{y \in Y} (s_{yi}+ d_{yi}))
 \end{equation}
