--- a/Model slides/models.tex
+++ b/Model slides/models.tex
@@ -583,7 +583,7 @@ subject to:
 \begin{align}
 l_y \cdot N_{ym\sigma} 			&\geq 	P_m \cdot d^P_y + R_{m\sigma} \cdot d^R_y	 + \gamma_\sigma - e_{ym\sigma} \cdot M
 																				& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
-1 						&\geq		e_{ym\sigma} + \frac{P_m \cdot d^P_y + R_{m\sigma} \cdot d^R_y}{A}	& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
+1 						&\geq		e_{ym\sigma} + \frac{P_m + R_{m\sigma}}{A}					& \forall \sigma \in S, \forall m \in M, \forall y \in Y 	\\
 \sum_{m' = 0}^{m-1} f_{m'\sigma}	&\geq 	\sum_{m' = 0}^m R_{m'\sigma}								& \forall \sigma \in S, \forall m \in M			\\
 \sum_{m\in M} P_m 			&\geq 	A 												&						
 \end{align}
