Started on introduction

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -84,18 +84,22 @@ This report aims to give a detailed overview of the research progress I made bet
 
 \pagebreak
 
-\section{Introduction}
+\section{Introduction}\label{ss:omtrp}
+For the past two years, I have been researching logistics related to offshore windfarm projects; the installation, maintenance, and decommissioning of windfarms in various seas and oceans, primarily the North Sea. The installation and decommissioning projects (at the start and end of the windfarm's lifespan respectively) can often take up to several years, and the lifespan of such farms is usually between 20 and 30 years, over which maintenance has to be done. For these projects, expensive vessels have to be used, the rent of which is often upwards of \pounds 100.000 per day \cite{barlow2014support}, hence a project with multiple vessels over many months can cost upwards of \pounds 100 million \cite{kaiser2010offshore}. Therefore, even small improvements to the schedules can save significant amounts of money.
+
+The complexity with these logistics comes from various factors, the first being the severe impact that weather conditions can have on when operational tasks can be completed. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Another factor which can further limit possible schedules is the inflexibility involved in vessel chartering (renting), since vessels of the required caliber cannot be chartered on short notice, making adaptive in-the-moment scheduling is impossible. This means we will have to make decisions significantly in advance, and run the risk of chartering vessels in periods where they might not be able to complete their tasks due to the weather conditions. 
+
+This report will detail the research progress I have made since the completion of my first yearly review, which (due to scheduling issues and delays) was only completed in January 2020. Further on in this section, I will recap the specific parts of this problem that I am looking at (\Cref{ss:prob}), and which research questions I initially posed (\Cref{ss:quest}). Then \Cref{s:model} through  \Cref{s:addit} will talk about the work I have been since the last review. Respectively, these sections are about the models I have developed, how I have implemented them, the knowledge gaps I closed, and all additional activities I have taken part in. Finally, \Cref{s:next} will discuss the next steps for this project. 
+
+\subsection{Problem description} \label{ss:prob}
 Lorem Ipsum 
 
-\subsection{Problem description}
-Lorem Ipsum 
-
-\subsection{Research questions}
+\subsection{Research questions}\label{ss:quest}
 Lorem Ipsum 
 
 \pagebreak
 
-\section{Developing models}
+\section{Developing models}\label{s:model}
 Lorem Ipsum 
 
 \subsection{Initial models}
@@ -106,17 +110,17 @@ Lorem Ipsum
 
 \pagebreak
 
-\section{Implementation}
+\section{Implementation}\label{s:impl}
 Lorem Ipsum 
 
 \pagebreak
 
-\section{Closing knowledge gaps}
+\section{Closing knowledge gaps}\label{s:know}
 Lorem Ipsum 
 
 \pagebreak
 
-\section{Additional activities} %COWORK course and teaching
+\section{Additional activities} \label{s:addit} %COWORK course and teaching
 In addition to the work directly related to my PhD project, I have participated in some courses. 
 
 I was supposed to take part in the NATCOR course Convex Optimization, to be held at the University of Edinburgh in June 2020. However, due to the Covid-19 pandemic this course was canceled. I was also enrolled in the NATCOR course Forecasting and Predictive Analytics, which was to be held in September 2020 at Lancaster University. This course, due the same pandemic, has been postponed to February 2020. 
@@ -135,7 +139,7 @@ This was my first real teaching experience, and I think it went very well. I enj
 
 \pagebreak
 
-\section{Next steps}
+\section{Next steps}\label{s:next}
 Lorem Ipsum 
 
 \subsection{Timeline}
